# tmux-sysstat-rs

./: Cargo.toml
src/: main.rs
