[package]
name = "tmux-sysstat-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"
# tmux_interface = "^0.1"
anyhow = "*"
psutil = "*"
bytesize = "*"
tmux_interface = {version = "^0.2",features = ["tmux_2_6"],default-features = false}

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'abort'
incremental = false
overflow-checks = false
